CHATS_SIT/force-app/main/default/objects/Schedule_c__x.object
<CustomObject>
    <externalDataSource>OEC_Provider_Datasource</externalDataSource>
    <externalName>Schedule__c</externalName>
    <fields>
        <fullName>Account_c__c</fullName>
        <externalDeveloperName>Account__c</externalDeveloperName>
        <label>Provider</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Any_Orphans_c__c</fullName>
        <externalDeveloperName>Any_Orphans__c</externalDeveloperName>
        <label>Any Orphans?</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Attended_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>Attended__c</externalDeveloperName>
        <label>Attended</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Authorization_c__c</fullName>
        <externalDeveloperName>Authorization__c</externalDeveloperName>
        <label>Authorization</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Authorizaton_Number_c__c</fullName>
        <externalDeveloperName>Authorizaton_Number__c</externalDeveloperName>
        <label>Authorizaton Number</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CI_Authorization_Date_c__c</fullName>
        <externalDeveloperName>CI_Authorization_Date__c</externalDeveloperName>
        <inlineHelpText>Integration Driven - Date of the authorization. Format: CCYY-MM-DD</inlineHelpText>
        <label>Authorization Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CI_Authorization_Hours_c__c</fullName>
        <externalDeveloperName>CI_Authorization_Hours__c</externalDeveloperName>
        <inlineHelpText>Integration Driven - # of hours authorized</inlineHelpText>
        <label>Authorization Hours</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CI_Authorization_Id_c__c</fullName>
        <externalDeveloperName>CI_Authorization_Id__c</externalDeveloperName>
        <inlineHelpText>Integration Driven - Number identifying the authorization</inlineHelpText>
        <label>Authorization Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CI_Authorization_Rate_Type_c__c</fullName>
        <externalDeveloperName>CI_Authorization_Rate_Type__c</externalDeveloperName>
        <inlineHelpText>31	Overnight
32	Overnight Tier 1
33	Overnight Tier 2
34	Overnight Tier 3
35	Overnight Tier 4
36	Overnight Tier 5</inlineHelpText>
        <label>Authorization Rate Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>26</fullName>
                </value>
                <value>
                    <fullName>27</fullName>
                </value>
                <value>
                    <fullName>28</fullName>
                </value>
                <value>
                    <fullName>29</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CI_IDN_Schedule_Transaction_c__c</fullName>
        <externalDeveloperName>CI_IDN_Schedule_Transaction__c</externalDeveloperName>
        <label>IDN Schedule Transaction</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CI_Schedule_Ext_Id_c__c</fullName>
        <externalDeveloperName>CI_Schedule_Ext_Id__c</externalDeveloperName>
        <label>CI_Schedule_Ext_Id</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Individual_c__c</fullName>
        <externalDeveloperName>Case_Individual__c</externalDeveloperName>
        <label>Case Individual</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Check_In_Count_c__c</fullName>
        <externalDeveloperName>Check_In_Count__c</externalDeveloperName>
        <label>Check-In Count</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Check_Out_Count_c__c</fullName>
        <externalDeveloperName>Check_Out_Count__c</externalDeveloperName>
        <label>Check-Out Count</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ConnectionReceivedId__c</fullName>
        <externalDeveloperName>ConnectionReceivedId</externalDeveloperName>
        <label>Received Connection ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConnectionSentId__c</fullName>
        <externalDeveloperName>ConnectionSentId</externalDeveloperName>
        <label>Sent Connection ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Name_c__c</fullName>
        <externalDeveloperName>Contact_Name__c</externalDeveloperName>
        <label>Contact Name</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CreatedById__c</fullName>
        <externalDeveloperName>CreatedById</externalDeveloperName>
        <label>Created By ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <externalDeveloperName>CreatedDate</externalDeveloperName>
        <label>Created Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Day_Sort_c__c</fullName>
        <externalDeveloperName>Day_Sort__c</externalDeveloperName>
        <label>Day Sort</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Day_of_the_Week_c__c</fullName>
        <externalDeveloperName>Day_of_the_Week__c</externalDeveloperName>
        <inlineHelpText>Day of the week the Authorization Date falls on.</inlineHelpText>
        <label>Day of the Week</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Denial_Reason_c__c</fullName>
        <externalDeveloperName>Denial_Reason__c</externalDeveloperName>
        <label>Denial Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CHATS_CASE_STATUS_NOT_EQUAL_TO_OPEN</fullName>
                    <label>CHATS Case Status not equal to open</label>
                </value>
                <value>
                    <fullName>AUTHORIZATION_BEGIN_DATE_IN_THE_FUTURE</fullName>
                    <label>Authorization Begin Date in the future</label>
                </value>
                <value>
                    <fullName>AUTHORIZATION_END_DATE_IN_THE_PAST</fullName>
                    <label>Authorization End Date in the past</label>
                </value>
                <value>
                    <fullName>AUTHORIZATION_STATUS_NOT_EQUAL_TO_APPROVED</fullName>
                    <label>Authorization Status not equal to Approved</label>
                </value>
                <value>
                    <fullName>AUTHORIZATON_FISCAL_AGREEMENT_NOT_VALID</fullName>
                    <label>Authorization Fiscal Agreement not Valid</label>
                </value>
                <value>
                    <fullName>NO_DROP_IN_DAYS_REMAINING</fullName>
                    <label>No Drop in Days Remaining</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hours_c__c</fullName>
        <externalDeveloperName>Hours__c</externalDeveloperName>
        <label>Hours</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Household_Name_c__c</fullName>
        <externalDeveloperName>Household_Name__c</externalDeveloperName>
        <label>Household Name</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Household_c__c</fullName>
        <externalDeveloperName>Household__c</externalDeveloperName>
        <label>Household</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>In_Current_Month_c__c</fullName>
        <externalDeveloperName>In_Current_Month__c</externalDeveloperName>
        <inlineHelpText>Yes - Authorization day &quot;Month&quot; is in the current month
No -  Authorization day &quot;Month&quot; is NOT  in the current month</inlineHelpText>
        <label>In Current Month?</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>In_current_week_c__c</fullName>
        <externalDeveloperName>In_current_week__c</externalDeveloperName>
        <label>In current week?</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>IsDeleted</externalDeveloperName>
        <label>Deleted</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LastActivityDate__c</fullName>
        <externalDeveloperName>LastActivityDate</externalDeveloperName>
        <label>Last Activity Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LastModifiedById__c</fullName>
        <externalDeveloperName>LastModifiedById</externalDeveloperName>
        <label>Last Modified By ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastModifiedDate__c</fullName>
        <externalDeveloperName>LastModifiedDate</externalDeveloperName>
        <label>Last Modified Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastReferencedDate__c</fullName>
        <externalDeveloperName>LastReferencedDate</externalDeveloperName>
        <label>Last Referenced Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastViewedDate__c</fullName>
        <externalDeveloperName>LastViewedDate</externalDeveloperName>
        <label>Last Viewed Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MC_PLU_Authorization_c__c</fullName>
        <externalDeveloperName>MC_PLU_Authorization__c</externalDeveloperName>
        <label>MC_PLU_Authorization</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MC_PLU_Case_Individual_c__c</fullName>
        <externalDeveloperName>MC_PLU_Case_Individual__c</externalDeveloperName>
        <label>MC_PLU_Case_Individual</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MC_Proxy_ID_c__c</fullName>
        <externalDeveloperName>MC_Proxy_ID__c</externalDeveloperName>
        <label>MC_Proxy_ID</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MC_Restriction_001_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>MC_Restriction_001__c</externalDeveloperName>
        <label>MC_Restriction__001</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <externalDeveloperName>Name</externalDeveloperName>
        <label>Schedule</label>
        <length>80</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Note_c__c</fullName>
        <externalDeveloperName>Note__c</externalDeveloperName>
        <label>Mobile Feedback</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Overnight_Authorization_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>Overnight_Authorization__c</externalDeveloperName>
        <label>Overnight Authorization</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OwnerId__c</fullName>
        <externalDeveloperName>OwnerId</externalDeveloperName>
        <label>Owner ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PP_End_Time_c__c</fullName>
        <externalDeveloperName>PP_End_Time__c</externalDeveloperName>
        <label>PP End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PP_Start_Time_c__c</fullName>
        <externalDeveloperName>PP_Start_Time__c</externalDeveloperName>
        <label>PP Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Schedule_Type_c__c</fullName>
        <externalDeveloperName>Schedule_Type__c</externalDeveloperName>
        <inlineHelpText>PT - 0hrs,0min, 1sec  through five 5hrs 0min, 0sec
FT - 5hrs, 0min, 1sec through 12hrs, 0min, 0sec
FT/PT -12hrs, 0min, 1sec through 17hrs, 0min, 0sec
FTFT -17hrs, 0min, 1sec through 24hrs, 0min, 0sec</inlineHelpText>
        <label>Schedule Type</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SystemModstamp__c</fullName>
        <externalDeveloperName>SystemModstamp</externalDeveloperName>
        <label>System Modstamp</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Type_c__c</fullName>
        <externalDeveloperName>Type__c</externalDeveloperName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CCCAP_AUTHORIZED</fullName>
                    <label>CCCAP Authorized</label>
                </value>
                <value>
                    <fullName>PRIVATE_PAY</fullName>
                    <label>Private Pay</label>
                </value>
                <value>
                    <fullName>DROP_IN</fullName>
                    <label>Drop In</label>
                </value>
                <value>
                    <fullName>CCCAP_NOT_AUTHORIZED</fullName>
                    <label>CCCAP Not Authorized</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Schedule</label>
    <pluralLabel>Schedules</pluralLabel>
</CustomObject>